--- a/styles.css
+++ b/styles.css
@@ -24,13 +24,13 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    display: none; /* Hide all media initially */
+    display: none; 
   }
   
   .media-wrapper p {
     position: absolute;
-    top: 10px; /* Adjust the top position as needed */
-    left: 20px; /* Adjust the left position as needed */
+    top: 10px; 
+    left: 20px; 
     font-size: 18px;
     color: black;
     font-family: 'Caxton', 'serif';
@@ -41,8 +41,8 @@ body, html {
     text-decoration: underline;
   }
   .media-wrapper.active {
-    display: block; /* Show the active media item */
-    z-index: 1; /* Ensure it's on top */
+    display: block; 
+    z-index: 1; 
   }
   
   img, video {
@@ -53,29 +53,29 @@ body, html {
 
   @media only screen and (max-width: 600px) {
     #gallery .media-wrapper {
-      width: 100vh; /* Set width to viewport height to fit the screen */
-      height: 100vw; /* Set height to viewport width to fit the screen */
-      top: 50%; /* Align to the center vertically */
-      left: 50%; /* Align to the center horizontally */
+      width: 100vh; 
+      height: 100vw; 
+      top: 50%; 
+      left: 50%; 
       position: absolute; 
-      overflow: hidden; /* Hide overflow to prevent cropping */
-      transform-origin: center; /* Set the rotation origin to the center */
-      transform: translate(-50%, -50%) rotate(-90deg); /* Translate and rotate */
-      display: flex; /* Use flexbox for centering */
-      justify-content: center; /* Center horizontally */
-      align-items: center; /* Center vertically */
+      overflow: hidden; 
+      transform-origin: center; 
+      transform: translate(-50%, -50%) rotate(-90deg); 
+      display: flex; 
+      justify-content: center;
+      align-items: center; 
     }
   
     #gallery .media-wrapper img,
     #gallery .media-wrapper video {
-      width: 100%; /* Set maximum width to 100% */
-      height: auto; /* Set maximum height to 100% */
-      object-fit: contain; /* Ensure the entire content is visible within the container */
+      width: 100%; 
+      height: auto; 
+      object-fit: contain; 
     }
   }
 
   @media only screen and (max-width: 600px) {
     .media-wrapper p {
-      font-size: 14px; /* Adjust the font size for smaller screens */
+      font-size: 14px; 
     }
   }
